sg.tf


resource "aws_security_group" "sg" {
  name = "custom-sg"
  description = "allows only app and ssh ports"
  vpc_id = aws_vpc.myvpc.id
ingress {
  description = "SSH"
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
 }
ingress {
  description = "HTTP"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
 }
ingress {
  description = "HTTPS"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
 }
egress {
  description = "All Traffic"
  from_port = 0
  to_port = 0
  protocol = -1
  cidr_blocks = ["0.0.0.0/0"]
 }
tags = {
	Name = "Custom-SG"
  }
}
